infra/k8s/auth-psql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-psql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-psql
  template:
    metadata:
      labels:
        app: auth-psql
    spec:
      containers:
        - name: auth-psql
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: auth-psql-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: auth-psql-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
