infra/k8s/comment-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-mongo
  template:
    metadata:
      labels:
        app: comment-mongo
    spec:
      containers:
        - name: comment-mongo
          image: mongo
