infra/k8s/filter-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filter-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filter
  template:
    metadata:
      labels:
        app: filter
    spec:
      containers:
        - name: filter
          image: rkekqmf0926/filter
