infra/k8s/filter-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filter-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filter-redis
  template:
    metadata:
      labels:
        app: filter-redis
    spec:
      containers:
        - name: filter-redis
          image: redis
