infra/k8s/post-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post-mongo
  template:
    metadata:
      labels:
        app: post-mongo
    spec:
      containers:
        - name: post-mongo
          image: mongo
