infra/k8s/auth-psql-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-psql-srv
spec:
  selector:
    app: auth-psql
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
