infra/k8s/comment-mongo-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: comment-mongo-srv
spec:
  selector:
    app: comment-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
