infra/k8s/comment-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: comment-srv
spec:
  selector:
    app: comment
  ports:
    - name: comment
      protocol: TCP
      port: 3000
      targetPort: 3000
