infra/k8s/filter-redis-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: filter-redis-srv
spec:
  selector:
    app: filter-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
