infra/k8s/filter-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: filter-srv
spec:
  selector:
    app: filter
  ports:
    - name: filter
      protocol: TCP
      port: 3000
      targetPort: 3000
