infra/k8s/post-mongo-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-mongo-srv
spec:
  selector:
    app: post-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
